scss fixes and header text wrapping goodness

--- a/_sass/components/_section.scss
+++ b/_sass/components/_section.scss
@@ -18,20 +18,21 @@
 			width: -webkit-max-content;
 			width: -ms-max-content;
 			width: max-content;
+      max-width: 100%;
 			margin-bottom: _size(element-margin);
 
 			> :first-child {
-				margin-bottom: 0;
-				width: calc(100% + 0.5em);
+				  margin-bottom: 0;
+				  width: calc(100% + 0.5em);
 
-				&:after {
-					content: '';
-					background-color: _palette(fg-bold);
-					display: block;
-					height: 2px;
-					margin: 0.325em 0 0.5em 0;
-					width: 100%;
-				}
+				  &:after {
+					    content: '';
+					    background-color: _palette(fg-bold);
+					    display: block;
+					    height: 2px;
+					    margin: 0.325em 0 0.5em 0;
+					    width: 100%;
+				  }
 			}
 
 			> p {
